# portfolio-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  demo_equity_curve.py  main.py  models.py  pyproject.toml  requirements.txt  test_snapshot.py
api/: __init__.py  routes.py  websocket.py
db/: __init__.py  database.py  models.py
okx/: __init__.py  rest_client.py  ws_client.py
scheduler/: __init__.py  snapshot_task.py
static/: app.js  index.html
