[project]
name = "portfolio-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-socks[asyncio]",
    "httpx[socks]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pre-commit",
]
